--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: synemono; 
+  font-family:  'Syne Mono', monospace; 
   font-size:36px; 
   margin: 10px 50px; 
   letter-spacing: 6px; 
