--- a/styles/style.css
+++ b/styles/style.css
@@ -4,4 +4,8 @@ body {
   margin: 10px 50px; 
   letter-spacing: 6px; 
   font-weight: bold;
+  background-image: url('https://ncazaleafestival.org/wp-content/uploads/2017/01/background-2.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
